@@ -171,10 +171,10 @@ General rule of life.
 .BI \-\-config\fB= <file>
 Read configuration settings from <file>, if it exists.
 .TP
-.B \-\-version\fP,\fB  \-V
+.B  \-\-version\fP,\fB  \-V
 Show this program\(aqs version number and exit.
 .TP
-.B \-\-help\fP,\fB  \-h
+.B  \-\-help\fP,\fB  \-h
 Show this help message and exit.
 .UNINDENT
 .SH OTHER SECTION
@@ -381,7 +381,7 @@ r""".INDENT 0.0
 .B optional arguments:
 .INDENT 7.0
 .TP
-.B \-h\fP,\fB  \-\-help
+.B  \-h\fP,\fB  \-\-help
 show this help
 .TP
 .BI \-\-output \ FILE\fR,\fB \ \-o \ FILE
